Restructure grid so that images and text align correctly

--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,7 @@
 html {
   box-sizing: border-box;
-  font-family: "Patua One", cursive;
-  font-size: 2rem;
+  font-family: Georgia, serif;
   line-height: 1.5;
-  margin: .5rem;
-  background-color: #f2f1ed;
 }
 
 *,
@@ -15,76 +12,97 @@ html {
 
 body {
   margin: 0;
+  padding: 1rem;
+  display: grid;
+  grid-template-areas:
+    "header header"
+    "header header"
+    "figure figure";
+  grid-template-columns: 2fr;
+  grid-template-rows: 1fr;
 }
 
 img {
   width: 100%;
-  grid-column: 1 / -1;
-  grid-row: 1 / -1;
 }
 
 header {
   /* Remove the <header> box and allow us to directly apply header’s children to the grid. */
-  display: inline-grid;
-  grid-area: banner;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
-}
-
-h1 {
-  grid-column: 1;
-  grid-row: 3;
-  z-index: 1;
-  margin-bottom: 0.5rem;
-  max-width: 14rem;
-}
-
-h2 {
-  font-family: "Patua One", cursive;
-  margin: 0;
-  color: #30658d;
-  font-size: .95rem;
-}
-
-p {
-  margin: 0;
-  font-family: Georgia, sans-serif;
-  font-size: .5rem;
-}
-
-nav {
-  grid-column: 3 / -1;
-  grid-row: 1;
-}
-
-main {
-  margin: 0;
+  grid-area: header;
+  display: contents;
   padding: 0;
+  margin: 1rem;
 }
 
-ul {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
+.logo {
+  z-index: 100;
+  grid-area: header;
+  grid-row: 2;
+  grid-column: 1;
+  width: 15rem;
+  align-self: flex-end;
+  padding: 0 0 0 1rem;
+  margin-bottom: 1rem;
 }
 
-li {
-  list-style-type: none;
-  color: #fff;
+.pano {
+  grid-area: header;
+  grid-column: 1/span 2;
+  grid-row: 1 / span 2;
+  z-index: 1;
 }
 
-a {
-  text-decoration: underline;
-  color: #fff;
-  font-family: "Patua One", cursive;
-}
+  nav {
+    z-index: 50;
+    grid-row: 1;
+    grid-column: 2;
+  }
 
-main {
-  display: grid;
-  grid-template-areas:
-    "figure figure"
-}
+  ul {
+    display: flex;
+    padding-top: 0;
+    margin: 0;
+    padding-right: 3rem;
+    justify-content: flex-end;
+  }
 
-figure {
-  margin: 0;
-}
+  ul li {
+    font-family: "Patua One", sans-serif;
+    display: inline;
+    color: #fff;
+    text-decoration: none;
+    padding: 1rem;
+  }
+
+  a {
+    font-size: 2rem;
+    color: #fff;
+  }
+
+  main {
+    grid-area: figure;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin: 0;
+    padding: 0;
+    column-gap: 1rem;
+  }
+
+  figure {
+    padding: 1rem 0 0;
+    margin: 0;
+  }
+
+  h2 {
+    font-family: "Patua One", sans-serif;
+    font-weight: bold;
+    outline-color: #f2f1ed;
+    color: #30658d;
+    padding-bottom: 0;
+    margin-bottom: 0;
+  }
+
+  p {
+    padding: 0;
+    margin: 0;
+  }
